файл для работников2

--- a/orders/templates/orders/worker_orders.html
+++ b/orders/templates/orders/worker_orders.html
@@ -411,8 +411,9 @@
     }
 
     /* Задаем ширину для столбцов */
-    th:nth-child(1), td:nth-child(1) { width: 40%; } /* Номер заказа */
-    th:nth-child(2), td:nth-child(2) { width: 60%; } /* Стадия */
+    th:nth-child(1), td:nth-child(1) { width: 50%; } /* Номер заказа */
+    th:nth-child(2), td:nth-child(2) { width: 40%; } /* Стадия */
+    th:nth-child(3), td:nth-child(3) { width: 10%; } /* Файл  (или px вместо %) */
 
     /* Стили для ячейки с номером заказа */
     td:nth-child(1) {
